--- a/8.字符串.md
+++ b/8.字符串.md
@@ -1,1 +1,87 @@
+##8.字符串  
+###8.1字符串的创建
+String类即字符串类型,并不是Java的基本数据类型,可以像基本数据类型一样使用,用双引号括起来进行声明.  
+1.使用String()方法初始化一个新的创建String对象.  
+String s = new String();  
+2.String(char a[])  
+char a[]={'g','o','o','d'};  
+String s = new String(a);这两条等价于String s =new String("good");  
+
+    public class l {
+        public static void main(String arg[]) {
+            String a = "hello";
+            String s = "hello";
+            System.out.println(a==s);    //true  a和s指向同一个内存地址
+            String aa = new String("hello");
+            String ss = new String("hello");
+            System.out.println(aa==ss);  //false 分配了两个内存地址
+        }
+    }
+
+###8.2字符串连接
+1.多个字符串连接使用"+".  
+String s1 = new String("hello");  
+String s2 = new String("world");  
+String s = s1 +" "+ s2;  
+运行结果 hello world  
+2.连接其他数据类型  
+在字符串和其他数据类型连接时,同样使用"+"连接,连接之后的返回值是字符串.注意:只要"+"运算符的一个操作类型是字符串,编译器会将另外的操作类型转换成字符串形式.  
+
+    public class l {
+        public static void main(String arg[]) {
+            int num = 7;                //整型
+            float time = 7.5f;          //浮点数
+            System.out.println("一周有"+num+"天,"+"每天睡觉"+time+"小时");//字符串连接
+        }
+    }
+输出:一周有7天,每天睡觉7.5小时.  
+###8.3获取字符串信息
+1.获取字符串长度  
+使用String类的length()方法可以获取声明的字符串的长度,空格也计算在内.  
+
+    public class l {
+        public static void main(String arg[]) {
+            String s ="hello boy";
+            System.out.println("字符串的长度为"+s.length());
+        }
+    }
+输出:字符串的长度为9  
+2.获取指定字符的索引位置.  
+indexOf()方法来获取指定字符的位置.lastIndexOf()方法返回的是搜索的字符最后出现的位置.计数从0开始计算.  
+
+    public class l {
+        public static void main(String arg[]) {
+            String s ="hello boys";
+            System.out.println("第一个o的位置"+s.indexOf("o"));
+            System.out.println("最后一个o的位置"+s.lastIndexOf("o"));
+        }
+    }
+第一个o的位置4  
+最后一个o的位置7  
+3.获取指定位置的字符  
+使用String类的charAt()方法,可以获取指定索引处的字符.  
+
+    public class l {
+        public static void main(String arg[]) {
+            String s ="hello boys";
+            System.out.println("第6个索引位置是"+s.charAt(6));
+        }
+    }
+输出:第6个索引位置是b.ps:从0开始数,h是0,b是6.  
+###8.4去除字符串中的空格
+trim()方法可以去除字符串的前导,尾部的空格.  
+
+    public class l {
+        public static void main(String arg[]) {
+            String s1 ="       hello boys    ";
+            String s2 = s1.trim();
+            System.out.println("最初字符串长度"+s1.length());
+            System.out.println("去掉空格后字符串长度"+s2.length());
+            System.out.println("去掉空格后的字符串为"+s2);
+        }
+    }
+最初字符串长度21  
+去掉空格后字符串长度10  
+去掉空格后的字符串为hello boys  
+
 
