--- a/8.字符串.md
+++ b/8.字符串.md
@@ -68,20 +68,109 @@ indexOf()方法来获取指定字符的位置.lastIndexOf()方法返回的是搜
         }
     }
 输出:第6个索引位置是b.ps:从0开始数,h是0,b是6.  
-###8.4去除字符串中的空格
-trim()方法可以去除字符串的前导,尾部的空格.  
+###8.4字符串替换
+1.trim()方法可以去除字符串的前导,尾部的空格.  
 
     public class l {
         public static void main(String arg[]) {
             String s1 ="       hello boys    ";
             String s2 = s1.trim();
             System.out.println("最初字符串长度"+s1.length());
-            System.out.println("去掉空格后字符串长度"+s2.length());
-            System.out.println("去掉空格后的字符串为"+s2);
+            System.out.println("去掉前后空格后字符串长度"+s2.length());
+            System.out.println("去掉前后空格后的字符串为"+s2);
         }
     }
 最初字符串长度21  
-去掉空格后字符串长度10  
-去掉空格后的字符串为hello boys  
+去掉前后空格后字符串长度10  
+去掉前后空格后的字符串为hello boys  
+
+2.replace()方法用于替换所有与指定字符串相匹配的字符串.  
+replaceFirst()方法可以替换第一个出现的指定字符串.  
+
+    public class l {
+        public static void main(String arg[]) {
+            String s ="good good study";
+            String s1 = s.replace(" ", ""); //去空格
+            String s2 = s.replaceFirst("good", "bad");
+            System.out.println("全部变换后的字符串"+s1);
+            System.out.println("变换一个的字符串"+s2);
+        }
+    }
+全部变换后的字符串goodgoodstudy  
+变换一个的字符串bad good study  
+可以用于去除空格
+###8.5判断字符串
+1.判断字符串是否相等  
+equals()方法判断字符串时区分大小写.equalsIgnoreCase()方法判断时忽略大小写.  
+
+    public class l {
+        public static void main(String arg[]) {
+            String s = new String("hello");
+            String s1 = new String("HELLO");
+            String s2 = new String("HELLO");
+            System.out.println("s==s1 "+s.equals(s1));
+            System.out.println("s1==s2 "+s1.equals(s2));
+            System.out.println("忽略大小写s==s1 "+s.equalsIgnoreCase(s1));
+        }
+    }
+s==s1 false  
+s1==s2 true  
+忽略大小写s==s1 true  
+
+2.判断字符串的开始与结束  
+startsWith(),endsWith()方法是判断当前字符串是否以指定内容为开始或结束.  
+
+    public class l {
+        public static void main(String arg[]) {
+            String s = new String("hello");
+            System.out.println("字符串是否以h开始 "+s.startsWith("h"));
+            System.out.println("字符串是否以o结束 "+s.endsWith("o"));
+            System.out.println("字符串是否以k结束 "+s.endsWith("k"));
+        }
+    }  
+3.字母大小写转换  
+toLowerCase()方法是将字符串中的大写字母转换为小写.toUpperCase()是转为大写.在进行转换时,数字或非字符不受任何影响.  
+
+    public class l {
+        public static void main(String arg[]) {
+            String s = new String("helloHELLO");
+            String s1 = s.toLowerCase();
+            String s2 = s.toUpperCase();
+            System.out.println("原始"+s);
+            System.out.println("大写"+s1);
+            System.out.println("小写"+s2);
+        }
+    }
+原始helloHELLO  
+大写hellohello  
+小写HELLOHELLO  
+4.字符串分割  
+splid()方法可以根据指定的分隔符对字符串进行分割,有2种使用方法.  
+
+    public class l {
+        public static void main(String arg[]) {
+            String s = new String("aa,bb,cc,dd");
+            String[] a = s.split(",");
+            System.out.println("碰到,就分割后");
+            for(int i = 0;i<a.length;i++) {
+                System.out.println(a[i]);
+            }
+            String[] b = s.split(",",2 );    //可以选定分成多少份,将结果存放在字符串数组中.
+            System.out.println("按照,分割成2份后");
+            for(int i = 0;i<b.length;i++) {
+                System.out.println(b[i]);
+            }
+        }
+    }
+碰到,就分割后  
+aa  
+bb  
+cc  
+dd  
+按照,分割成2份后  
+aa  
+bb,cc,dd  
+
+
 
 
