--- a/7.异常.md
+++ b/7.异常.md
@@ -142,3 +142,25 @@ throw与throws两个关键字区别:
     }
 
 自定义异常,即是继承Exception类,然后添加新东西.使用时和之前一样,在方法上要声明抛出.  
+***
+###7.4finally块
+finnaly块的使用前提是必须要存在try块才能使用.  
+finally块的代码在任何情况下都会执行,除了jvm退出.  
+finally块非常适合做资源释放的工作,这样可以保证资源文件在任何情况下都会被释放.  
+
+try块的三种组合方式:  
+第一种:  
+try{  
+可能发生异常的代码}catch(捕获的异常类型 变量名){  
+处理异常的代码}  
+***
+第二种:
+try{  
+可能发生异常的代码}catch(捕获的异常类型 变量名){  
+处理异常的代码}  
+finally{资源释放}  
+***
+第三种:
+try{  
+可能发生异常的代码}
+finally{资源释放}  
