--- a/8.字符串.md
+++ b/8.字符串.md
@@ -171,6 +171,26 @@ dd
 aa  
 bb,cc,dd  
 
+###8.6正则表达式
 
-
+    public class l {
+        public static void main(String arg[]) {
+            String re ="\\d{3}";     //作为匹配的模版
+            String st1 = "001";
+            String st2 = "01a";
+            if(st1.matches(re)){
+                System.out.println("st1符合表达");
+            }else {
+                System.out.println("st1不符合表达");
+            }
+            if(st2.matches(re)){
+                System.out.println("st2符合表达");
+            }else  {
+                System.out.println("st2不符合表达式");
+            }
+        }
+    }
+st1符合表达  
+st2不符合表达式  
+可以作为帐号或者密码的设置格式.  
 
