--- a/1.基本的语句.md
+++ b/1.基本的语句.md
@@ -111,7 +111,10 @@ continue直接跳过当前外层循环,内层循环也不继续执行
 return的作用:  
 1.返回数据给函数的调用者  
 2.函数一旦执行到了return关键字,那么该函数**马上结束**.  
-
+注意:  
+int A =4;int B =5;
+return (double)A/(double)B;,这样可以返回小数,如果只是returnA/B;则返回值是0.  
+return(a>0);如果a>0,则返回true,返回一个布尔类型.
 
 
 
