--- a/9.包.md
+++ b/9.包.md
@@ -1,1 +1,16 @@
+###9.1.1包
+定义包的格式:  
+package 包名;  
+包名命名规则:包名全部小写.目录结构必须与包名的结构相匹配  
+包语句要注意的事项:  
+1. package语句必须位于java文件中第一个语句.  
+2. 如果一个类加上了包语句,那么该类的完整类名就是:包名.类名  
+3. 一个java文件只能有一个包语句.  
+###9.1.2导包
+导包语句的格式:  
+import 包名.类名;(导入XX包中的某个类)  
+import 包名.*;  
+导包语句要注意的细节:  
+1. 一个java文件中可以出现多次导包语句.
+2. "*"是导包语句的通配符,可以匹配任何的类名.不能匹配文件夹.  
 
