--- a/9.包.md
+++ b/9.包.md
@@ -9,8 +9,8 @@ package 包名;
 ###9.1.2导包
 导包语句的格式:  
 import 包名.类名;(导入XX包中的某个类)  
-import 包名.*;  
+import 包名.\*;  
 导包语句要注意的细节:  
-1. 一个java文件中可以出现多次导包语句.
-2. "*"是导包语句的通配符,可以匹配任何的类名.不能匹配文件夹.  
+1. 一个java文件中可以出现多次导包语句.  
+2. "\*"是导包语句的通配符,可以匹配任何的类名.不能匹配文件夹.  
 
