--- a/第一题.md
+++ b/第一题.md
@@ -1,3 +1,5 @@
+导入了两个类库[metadata-extractor-2.7.0](http://download.csdn.net/detail/mzglzzc/8285533)和[xmpcore-5.1.2](http://download.csdn.net/detail/mzglzzc/8383261)获取EXIF信息.  
+```
 import java.io.BufferedReader;
 import java.io.File;  
 import java.io.IOException;  
@@ -9,43 +11,50 @@ import com.drew.metadata.MetadataException;
 import com.drew.metadata.exif.ExifIFD0Directory;
 import com.drew.metadata.exif.GpsDirectory;  
 
-  
 public class L {  
-    public static File loca;
-    public static String location;
-    public static void  getinformation(File location)throws MetadataException,ImageProcessingException,IOException {
-        Metadata meta = JpegMetadataReader.readMetadata(location);  
-        GpsDirectory gps = meta.getDirectory(GpsDirectory.class); //GPS信息        
-        ExifIFD0Directory ex4 = meta.getDirectory(ExifIFD0Directory.class);//照相机制造商,型号,程序名称,拍摄时间
-        String[] dateinformation =ex4.getTags().toString().split(",");
+    public static File loca;       //指定路径的文件夹
+    public static String location; //输入的路径
+    public static void  getinformation(File location)throws
+    MetadataException,ImageProcessingException,IOException {
+        Metadata meta = JpegMetadataReader.readMetadata(location);       
+        ExifIFD0Directory ex = meta.getDirectory(ExifIFD0Directory.class);
+        //照相机制造商,型号,程序名称,拍摄时间
+        String[] dateinformation =ex.getTags().toString().split(","); //分割字符串
         for(int i=0;i<dateinformation.length;i++){        //选出日期和厂家
-        	if(dateinformation[i].startsWith(" [Exif IFD0] Date/Time")||dateinformation[i].startsWith(" [Exif IFD0] Make")) {
-        		System.out.println(dateinformation[i]);
+        	if(dateinformation[i].startsWith(" [Exif IFD0] Date/Time")
+        	||dateinformation[i].startsWith(" [Exif IFD0] Make")) {
+        		System.out.println(dateinformation[i]);  //获取日期和厂家
         	}
         }
-        String[] gpsinformation = gps.getTags().toString().split(",");
+        GpsDirectory gps = meta.getDirectory(GpsDirectory.class); //GPS信息     
+        String[] gpsinformation = gps.getTags().toString().split(","); //分割字符串
         for(int  i=1;i<5;i++) {           //获取GPS信息
         	System.out.println(gpsinformation[i]);
         }
     }
     public L () {
-    	System.out.println("请输入指定路径");
+    	System.out.println("请输入指定路径,例如f:/");
     	BufferedReader lo = new BufferedReader(new InputStreamReader(System.in));
     	try {
 			location = lo.readLine();
 			File file = new File(location);
+			if(!file.isDirectory()) {
+    			System.out.println("输入的不是文件夹目录");
+    			return ;
+    		}
 			File[] files = file.listFiles();
 			for(int i = 0;i<files.length;i++) {
 				if(new String(files[i].getName()).endsWith(".jpg")) {  //选出JPG格式的文件
-					System.out.println("名字是"+files[i].getName());
+					System.out.println("图片名称 "+files[i].getName());
 					getinformation(files[i]);
 				}
 			}
-		}catch(Exception e) {
+		}
+    	catch(Exception e) {
 			e.printStackTrace();
 		}
     }
     public static void main(String[] args) {
     	new L();
     }  
-} 
+} ```
