--- a/第一题.md
+++ b/第一题.md
@@ -1,4 +1,5 @@
 导入了两个类库[metadata-extractor-2.7.0](http://download.csdn.net/detail/mzglzzc/8285533)和[xmpcore-5.1.2](http://download.csdn.net/detail/mzglzzc/8383261)获取EXIF信息.  
+
 ```
 import java.io.BufferedReader;
 import java.io.File;  
@@ -57,4 +58,22 @@ public class L {
     public static void main(String[] args) {
     	new L();
     }  
-} ```
+}
+```
+运行结果:  
+请输入指定路径,例如f:/  
+F:/新建文件夹  
+图片名称1.jpg  
+ [Exif IFD0] Make - SAMSUNG  
+ [Exif IFD0] Date/Time - 2016:03:21 08:53:16  
+ [GPS] GPS Latitude Ref - N  
+ [GPS] GPS Latitude - 39° 54' 8.19"  
+ [GPS] GPS Longitude Ref - E  
+ [GPS] GPS Longitude - 119° 31' 43.46"  
+图片名称阿斯达斯的.jpg  
+ [Exif IFD0] Make - SAMSUNG  
+ [Exif IFD0] Date/Time - 2016:03:21 08:53:16  
+ [GPS] GPS Latitude Ref - N  
+ [GPS] GPS Latitude - 39° 54' 8.19"  
+ [GPS] GPS Longitude Ref - E  
+ [GPS] GPS Longitude - 119° 31' 43.46"  
