--- a/9.包.md
+++ b/9.包.md
@@ -13,4 +13,15 @@ import 包名.\*;
 导包语句要注意的细节:  
 1. 一个java文件中可以出现多次导包语句.  
 2. "\*"是导包语句的通配符,可以匹配任何的类名.不能匹配文件夹.  
+3. 访问的两个类在不同的包,需要进行导包.
+
+###9.2权限修饰符
+访问级别|访问控制修饰符|同类|同包|子类|不同包
+--------|--------------|----|----|----|-----
+公开    |   public     | √  |  √ |  √ |  √  
+受保护  |   protected  | √  |  √ |  √ |  x  
+默认    |   没有修饰符 | √  |  √ |  x |  x
+私有    |   private    | √  |  x |  x |  x    
+在不同的包下,只有public和protected可以进行访问.protected只能在继承的关系下才能访问.  
+
 
