--- a/第一题.md
+++ b/第一题.md
@@ -1,3 +1,304 @@
+```
+import java.io.BufferedInputStream;
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStreamReader;
+//0F01  厂商  EXIF的标签
+//0390  时间
+//2588  GPS
+public class L {
+	static int  Moffset=0;
+	static int  Doffset=0;
+	static int  Goffset=0;
+	static int index =12;
+	static int NGps = 0;
+	static int EGps = 0;
+	static int NGpsNum =0;
+	static int EGpsNum =0;
+	static byte[]i = new byte[8001];
+	public static void main (String args[]) throws IOException {
+		L l = new L();
+		L.GetAsc.Onestep.over Q = new L().new GetAsc().new Onestep().new over();
+		System.out.println("请输入指定文件,如F:/1.jpg");
+		BufferedReader lo = new BufferedReader(new InputStreamReader(System.in));
+		String fileName = lo.readLine();
+		File file = new File(fileName);
+		if(file.exists()){ 
+            try {
+                FileInputStream in = new FileInputStream(file);
+                BufferedInputStream dis=new BufferedInputStream(in);
+                dis.read(i, 0, 8000);         
+                l.getindex(i);
+                String ss =Q.getMAKE();
+                System.out.println(ss);
+                String sss=Q.getDATE();
+                System.out.println(sss);
+                Q.getGPSindex();
+                Q.getNGPS();
+                Q.getEGPS();        
+            } catch (IOException e) {  
+                e.printStackTrace();  
+            }finally{  
+            }  
+		}
+	}
+	public static String getMake(byte [] i) {      //根据得到的字节偏移,读字节数据,转为字符.
+		String make ="照相机厂商: ";
+		for(int o = 0;o<20;o++) {
+			if(i[index+Moffset+o]==0){
+				make = make+".";
+				break;
+			}
+			char e =(char)i[index+Moffset+o];
+			make = make + e;
+		}
+		return make;
+	}
+	public static String getDate(byte[] i) {       //和厂商是一样的道理.
+		String date = "拍摄时间: ";
+		for(int d = 0;d<19;d++) {
+			char e =(char)i[index+Doffset+d];
+			date = date + e;
+		}
+		return date;
+	}
+	public static int getindex(byte[]i){
+		for(int x=0;x<100;x++) {  
+        	if(i[x]==73&&i[x+1]==73){//计算49 49 II地址 ,刚开始写的,好像开头默认的是12个字节数.
+        		index = x;
+        		break;
+        	}
+        }
+		return index;
+	}
+	public static String clearffff(byte i) {   //字节转为字符串
+		String m =Integer.toHexString(i); 
+		if(m.startsWith("ffffff")) {
+    		m=m.replace("ffffff", "");
+    	}
+		return m;
+	}
+	public class GetAsc {  //成员内部类
+		public int getAsciinum(String s) {           //获取ASCII字符转为ASCII值
+			if(s.length()==1){
+				char[] k =s.substring(0, 1).toCharArray();
+				asciiToInt(k);
+				return asciiToInt(k);
+				
+			}
+			if(s.length()==2){
+				char[] k1 = s.substring(0, 1).toCharArray();
+				char[] k2 = s.substring(1, 2).toCharArray();
+				return asciiToInt(k1)*16+asciiToInt(k2);
+			}
+			return 0;
+		}
+		public class Onestep{                      //只是为了方便一点,定义的函数
+			public int onestep(byte i) {
+				return getAsciinum(clearffff(i));
+			}
+			public class over {
+				public String getMAKE() {
+					for(int x=0;x<2000;x++) {  
+	                	if(i[x]==15&&i[x+1]==1){//计算偏移 0F01地址偏移          厂商
+	                		 Moffset = onestep(i[x+11])*256*256*256+onestep(i[x+10])*256*256+onestep(i[x+9])*256+onestep(i[x+8]);
+	                		 break;
+	                	}
+	                }
+					return getMake(i);
+				}
+				public String getDATE() {
+					for(int x=0;x<4000;x++) {  
+	                	if(i[x]==3&&i[x+1]==-112){//计算偏移 0390地址偏移       日期
+	                		Doffset = onestep(i[x+11])*256*256*256+onestep(i[x+10])*256*256+onestep(i[x+9])*256+onestep(i[x+8]);
+	                		break;
+	                	}
+	                }
+					return getDate(i);
+				}
+				public void getGPSindex() {
+					for(int x=0;x<4000;x++) {  
+	                	if(i[x]==37&&i[x+1]==-120){//计算偏移 2588地址偏移  GPS信息
+	                		Goffset = onestep(i[x+11])*256*256*256+onestep(i[x+10])*256*256+onestep(i[x+9])*256+onestep(i[x+8]);
+	                		NGps = Goffset+22+index;
+	                		EGps = Goffset+46+index;
+	                		NGpsNum=onestep(i[NGps+15])*256*256*256+onestep(i[NGps+14])*256*256+onestep(i[NGps+13])*256+onestep(i[NGps+12]);
+	    					EGpsNum=onestep(i[EGps+15])*256*256*256+onestep(i[EGps+14])*256*256+onestep(i[EGps+13])*256+onestep(i[EGps+12]);
+	                		break; 
+	                	}
+	                }
+				}
+				public void getNGPS() {             //获取GPS信息
+					if(i[NGps]==78) {				//判断是N还是 S 下面都是一样的模式.看一个就好
+						System.out.print("纬度:N ");
+						for(int k = 0;k<3;k++){		//根据算法要得到三个数,用k表示循环次数,每一个数据要8个字节.
+							int z = 0;
+							int m = 0;
+							int c = k*8;
+							for(int x =3;x>=0;x--) { //计算方法
+								if(i[NGpsNum+index+x+c]<0) {
+									z=i[NGpsNum+index+x+c]+256+z;
+								}else{
+									z=onestep(i[NGpsNum+index+x+c])+z;
+								}
+								if(x>0){
+									z=z*256;
+								}
+							}
+							for(int x =7;x>=4;x--) {
+								if(i[NGpsNum+index+x+c]<0) {
+									m=i[NGpsNum+index+x+c]+m+256;
+								}else{
+									m=onestep(i[NGpsNum+index+x+c])+m;
+								}
+								if(x>4){
+									m=m*256;
+								}
+							}
+							if(k==2){
+							System.out.println((double)z/m+".");
+							}else{
+								System.out.print(z/m+".");
+							}
+						}
+					}else if (i[NGps]==83) {
+						System.out.print("纬度:S ");
+						for(int k = 0;k<3;k++){
+							int z = 0;
+							int m = 0;
+							int c = k*8;
+							for(int x =3;x>=0;x--) {
+								if(i[NGpsNum+index+x+c]<0) {
+									z=i[NGpsNum+index+x+c]+256+z;
+								}else{
+									z=onestep(i[NGpsNum+index+x+c])+z;
+								}
+								if(x>0){
+									z=z*256;
+								}
+							}
+							for(int x =7;x>=4;x--) {
+								if(i[NGpsNum+index+x+c]<0) {
+									m=i[NGpsNum+index+x+c]+m+256;
+								}else{
+									m=onestep(i[NGpsNum+index+x+c])+m;
+								}
+								if(x>4){
+									m=m*256;
+								}
+							}
+							if(k==2){
+							System.out.println((double)z/m+".");
+							}else{
+								System.out.print(z/m+".");
+							}
+						}
+					}else{
+						System.out.print("没有纬度信息");
+					}
+					
+				}
+				public void getEGPS() {
+					if(i[EGps]==69) {
+						System.out.print("经度:E ");
+						for(int k = 0;k<3;k++){
+							int z = 0;
+							int m = 0;
+							int c = k*8;
+							for(int x =3;x>=0;x--) {
+								if(i[EGpsNum+index+x+c]<0) {
+									z=i[EGpsNum+index+x+c]+256+z;
+								}else{
+									z=onestep(i[EGpsNum+index+x+c])+z;
+								}
+								if(x>0){
+									z=z*256;
+								}
+							}
+							for(int x =7;x>=4;x--) {
+								if(i[EGpsNum+index+x+c]<0) {
+									m=i[EGpsNum+index+x+c]+m+256;
+								}else{
+									m=onestep(i[EGpsNum+index+x+c])+m;
+								}
+								if(x>4){
+									m=m*256;
+								}
+							}
+							if(k==2){
+							System.out.println((double)z/m+".");
+							}else{
+								System.out.print(z/m+".");
+							}
+						}
+					}else if (i[EGps]==87) {
+						System.out.print("经度:W ");
+						for(int k = 0;k<3;k++){
+							int z = 0;
+							int m = 0;
+							int c = k*8;
+							for(int x =3;x>=0;x--) {
+								if(i[EGpsNum+index+x+c]<0) {
+									z=i[EGpsNum+index+x+c]+256+z;
+								}else{
+									z=onestep(i[EGpsNum+index+x+c])+z;
+								}
+								if(x>0){
+									z=z*256;
+								}
+							}
+							for(int x =7;x>=4;x--) {
+								if(i[EGpsNum+index+x+c]<0) {
+									m=i[EGpsNum+index+x+c]+m+256;
+								}else{
+									m=onestep(i[EGpsNum+index+x+c])+m;
+								}
+								if(x>4){
+									m=m*256;
+								}
+							}
+							if(k==2){
+							System.out.println((double)z/m+".");
+							}else{
+								System.out.print(z/m+".");
+							}
+						}
+					}else{
+						System.out.print("没有经度信息");
+					}
+					
+				}
+				
+			}
+		}
+	}
+	public static int asciiToInt(char[] asc) {   //ASCII值转为 十进制
+		int t = (int)asc[0];
+		switch(t) {
+		case 48: t=0;break;
+		case 49: t=1;break;
+		case 50: t=2;break;
+		case 51: t=3;break;
+		case 52: t=4;break;
+		case 53: t=5;break;
+		case 54: t=6;break;
+		case 55: t=7;break;
+		case 56: t=8;break;
+		case 57: t=9;break;
+		case 97: t=10;break;
+		case 98: t=11;break;
+		case 99: t=12;break;
+		case 100: t=13;break;
+		case 101: t=14;break;
+		case 102: t=15;break;
+		}
+		return t;
+	}
+}
+```
+***
 导入了两个类库[metadata-extractor-2.7.0](http://download.csdn.net/detail/mzglzzc/8285533)和[xmpcore-5.1.2](http://download.csdn.net/detail/mzglzzc/8383261)获取EXIF信息.  
 
 ```
