--- a/第一题.md
+++ b/第一题.md
@@ -1,3 +1,7 @@
+####这些信息的获取,我的图片比较少,同学的图也没有这些信息,所以只能对含有这些信息的图片进行获取,获取不到的时候,相关处理也是欠缺的.好像只是对有EXIF信息的图片才有效,图片有限,测试比较少,我手机拍的照片可以用  
+####由于时间关系,有很多做的都不够好,这一次走了弯路,在字节读取的时候,读取的是负值就不知道该怎么办,没有想起来可以直接加256获取16进制的值,把数据转化的比较麻烦,又是字符又是ASCII码,还有16进制,有些乱了,做到最后了才发现,超过字节长度的直接加上256就好了,这样数据变换处理用了很长的时间.然后中间好多重复代码可以优化,可以定义一些函数,由于成员内部类用的太多了,不想再定义了.别的好办法也没想起来,主要是比较着急吧.想快些做完,重复代码都可以简化,也是到了快做完的时候发现的问题.用循环就解决了很多事情,在获取GPS数据的时候就用了一下,之前也可以这样用,因为马上有假期,打算出去.比较急,总的来说不是很好.太多的时间花在了学习EXIF信息和数据转换上面了.如果刚开始就意识到可以用加256进行处理,估计程序会好很多.
+
+
 ```
 import java.io.BufferedInputStream;
 import java.io.BufferedReader;
@@ -9,13 +13,13 @@ import java.io.InputStreamReader;
 //0390  时间
 //2588  GPS
 public class L {
-	static int  Moffset=0;
-	static int  Doffset=0;
-	static int  Goffset=0;
+	static int  Moffset=0;   //厂商地址   将就算是个地址吧.
+	static int  Doffset=0;   //日期地址
+	static int  Goffset=0;   //GPS地址
 	static int index =12;
-	static int NGps = 0;
-	static int EGps = 0;
-	static int NGpsNum =0;
+	static int NGps = 0;     // 是 N还是 S的地址
+	static int EGps = 0;     // 是 W还是 E的地址
+	static int NGpsNum =0;   // 纬度数据的地址
 	static int EGpsNum =0;
 	static byte[]i = new byte[8001];
 	public static void main (String args[]) throws IOException {
