--- a/第一题2.md
+++ b/第一题2.md
@@ -2,27 +2,27 @@
 ####这些信息的获取,我的图片比较少,同学的图也没有这些信息,所以只能对含有这些信息的图片进行获取,获取不到的时候,相关处理也是欠缺的.好像只是对有EXIF信息的图片才有效,图片有限,测试比较少,我手机拍的照片可以用  
 ####由于时间关系,有很多做的都不够好,这一次走了弯路,在字节读取的时候,读取的是负值就不知道该怎么办,没有想起来可以直接加256获取16进制的值,把数据转化的比较麻烦,又是字符又是ASCII码,还有16进制,有些乱了,做到最后了才发现,超过字节长度的直接加上256就好了,这样数据变换处理用了很长的时间.然后中间好多重复代码可以优化,可以定义一些函数,由于成员内部类用的太多了,不想再定义了.别的好办法也没想起来,主要是比较着急吧.想快些做完,重复代码都可以简化,也是到了快做完的时候发现的问题.用循环就解决了很多事情,在获取GPS数据的时候就用了一下,之前也可以这样用,因为马上有假期,打算出去.比较急,总的来说不是很好.太多的时间花在了学习EXIF信息和数据转换上面了.如果刚开始就意识到可以用加256进行处理,估计程序会好很多.
 
-
 ```
 import java.io.BufferedInputStream;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
-import java.io.InputStreamReader;
-//0F01  厂商  EXIF的标签
+//0F01  厂商
 //0390  时间
-//2588  GPS
+//2588  GPS()里面有很多东西..
+import java.io.InputStreamReader;
+
 public class L {
-	static int  Moffset=0;   //厂商地址   将就算是个地址吧.
-	static int  Doffset=0;   //日期地址
-	static int  Goffset=0;   //GPS地址
-	static int index =12;
-	static int NGps = 0;     // 是 N还是 S的地址
-	static int EGps = 0;     // 是 W还是 E的地址
-	static int NGpsNum =0;   // 纬度数据的地址
-	static int EGpsNum =0;
-	static byte[]i = new byte[8001];
+	static int  Moffset=0;    //厂商地址   将就算是个地址吧.
+	static int  Doffset=0;    //日期地址
+	static int  Goffset=0;    //GPS地址
+	static int index =12;     //头字节数偏移量
+	static int NGps = 0;			//是N还是S的地址
+	static int EGps = 0;      //是W还是E的地址
+	static int NGpsNum =0;    //纬度数据地址
+	static int EGpsNum =0;    //经度数据地址
+	static byte[]i = new byte[8001];    //读取图片存放的缓冲数组
 	public static void main (String args[]) throws IOException {
 		L l = new L();
 		L.GetAsc.Onestep.over Q = new L().new GetAsc().new Onestep().new over();
@@ -49,7 +49,7 @@ public class L {
             }  
 		}
 	}
-	public static String getMake(byte [] i) {      //根据得到的字节偏移,读字节数据,转为字符.
+	public static String getMake(byte [] i) {   //[]里放的是厂商偏移地址,读字节数据,转为字符.
 		String make ="照相机厂商: ";
 		for(int o = 0;o<20;o++) {
 			if(i[index+Moffset+o]==0){
@@ -71,8 +71,8 @@ public class L {
 	}
 	public static int getindex(byte[]i){
 		for(int x=0;x<100;x++) {  
-        	if(i[x]==73&&i[x+1]==73){//计算49 49 II地址 ,刚开始写的,好像开头默认的是12个字节数.
-        		index = x;
+        	if(i[x]==73&&i[x+1]==73){//计算49 49 II地址,刚开始写的求
+        		index = x;             //字节地址偏移,好头默认的是12个字节数.
         		break;
         	}
         }
@@ -107,7 +107,7 @@ public class L {
 			public class over {
 				public String getMAKE() {
 					for(int x=0;x<2000;x++) {  
-	                	if(i[x]==15&&i[x+1]==1){//计算偏移 0F01地址偏移          厂商
+	                	if(i[x]==15&&i[x+1]==1){//计算偏移0F01地址偏移,按照算法计算,以下同理 厂商
 	                		 Moffset = onestep(i[x+11])*256*256*256+onestep(i[x+10])*256*256+onestep(i[x+9])*256+onestep(i[x+8]);
 	                		 break;
 	                	}
@@ -125,18 +125,30 @@ public class L {
 				}
 				public void getGPSindex() {
 					for(int x=0;x<4000;x++) {  
-	                	if(i[x]==37&&i[x+1]==-120){//计算偏移 2588地址偏移  GPS信息
+	                	if(i[x]==37&&i[x+1]==-120){//计算偏移 2588地址偏移     GPS信息
 	                		Goffset = onestep(i[x+11])*256*256*256+onestep(i[x+10])*256*256+onestep(i[x+9])*256+onestep(i[x+8]);
-	                		NGps = Goffset+22+index;
-	                		EGps = Goffset+46+index;
-	                		NGpsNum=onestep(i[NGps+15])*256*256*256+onestep(i[NGps+14])*256*256+onestep(i[NGps+13])*256+onestep(i[NGps+12]);
-	    					EGpsNum=onestep(i[EGps+15])*256*256*256+onestep(i[EGps+14])*256*256+onestep(i[EGps+13])*256+onestep(i[EGps+12]);
+	                		int ll =Goffset+12;
+	                		
+	                		for(int k =0;k<500;k++) {
+	                			if(i[ll+k]==1&&i[ll+1+k]==0&&i[ll+2+k]==2&&i[ll+3+k]==0) {
+	                				NGps =Goffset+k+12;
+	                				break;
+	                			}
+	                		}
+	                		for(int k =0;k<500;k++) {
+	                			if(i[ll+k]==3&&i[ll+1+k]==0&&i[ll+2+k]==2&&i[ll+3+k]==0) {
+	                				EGps =Goffset+k+12;
+	                				break;
+	                			}
+	                		}
+	                		NGpsNum=onestep(i[NGps+23])*256*256*256+onestep(i[NGps+22])*256*256+onestep(i[NGps+21])*256+onestep(i[NGps+20]);
+	                		EGpsNum=onestep(i[EGps+23])*256*256*256+onestep(i[EGps+22])*256*256+onestep(i[EGps+21])*256+onestep(i[EGps+20]);
 	                		break; 
 	                	}
 	                }
 				}
-				public void getNGPS() {             //获取GPS信息
-					if(i[NGps]==78) {				//判断是N还是 S 下面都是一样的模式.看一个就好
+				public void getNGPS() {  //获取GPS信息
+					if(i[NGps+8]==78){//判断是N还是 S 下面都是一样的模式.看一个就好
 						System.out.print("纬度:N ");
 						for(int k = 0;k<3;k++){		//根据算法要得到三个数,用k表示循环次数,每一个数据要8个字节.
 							int z = 0;
@@ -168,13 +180,14 @@ public class L {
 								System.out.print(z/m+".");
 							}
 						}
-					}else if (i[NGps]==83) {
+					
+					}else if(i[NGps+8]==83) {
 						System.out.print("纬度:S ");
-						for(int k = 0;k<3;k++){
+						for(int k = 0;k<3;k++){		//根据算法要得到三个数,用k表示循环次数,每一个数据要8个字节.
 							int z = 0;
 							int m = 0;
 							int c = k*8;
-							for(int x =3;x>=0;x--) {
+							for(int x =3;x>=0;x--) { //计算方法
 								if(i[NGpsNum+index+x+c]<0) {
 									z=i[NGpsNum+index+x+c]+256+z;
 								}else{
@@ -200,13 +213,12 @@ public class L {
 								System.out.print(z/m+".");
 							}
 						}
-					}else{
-						System.out.print("没有纬度信息");
+					}else {
+						System.out.println("没有纬度信息");
 					}
-					
 				}
 				public void getEGPS() {
-					if(i[EGps]==69) {
+					if(i[EGps+8]==69) {
 						System.out.print("经度:E ");
 						for(int k = 0;k<3;k++){
 							int z = 0;
@@ -238,7 +250,7 @@ public class L {
 								System.out.print(z/m+".");
 							}
 						}
-					}else if (i[EGps]==87) {
+					}else if (i[EGps+8]==87) {
 						System.out.print("经度:W ");
 						for(int k = 0;k<3;k++){
 							int z = 0;
@@ -303,6 +315,7 @@ public class L {
 	}
 }
 ```
+
 ***
 导入了两个类库[metadata-extractor-2.7.0](http://download.csdn.net/detail/mzglzzc/8285533)和[xmpcore-5.1.2](http://download.csdn.net/detail/mzglzzc/8383261)获取EXIF信息.  
 
