--- a/第一题2.md
+++ b/第一题2.md
@@ -315,7 +315,19 @@ public class L {
 	}
 }
 ```
-
+运行结果:  
+1. 请输入指定文件,如F:/1.jpg  
+F:/1.jpg  
+照相机厂商: SAMSUNG.  
+拍摄时间: 2016:03:21 08:53:16  
+纬度:N 39.54.8.1903.  
+经度:E 119.31.43.4637.  
+2. 请输入指定文件,如F:/1.jpg  
+F:/QQQ.JPG  
+照相机厂商: samsung.  
+拍摄时间: 2016:03:30 21:53:31  
+纬度:N 39.54.7.0.  
+经度:E 119.31.43.0.  
 ***
 导入了两个类库[metadata-extractor-2.7.0](http://download.csdn.net/detail/mzglzzc/8285533)和[xmpcore-5.1.2](http://download.csdn.net/detail/mzglzzc/8383261)获取EXIF信息.  
 
