--- a/第一题3.md
+++ b/第一题3.md
@@ -1,3 +1,182 @@
+###代码修改后
+```
+import java.io.BufferedInputStream;
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStreamReader;
+//0F01  厂商
+//0390  时间
+//2588  GPS()
+public class L {
+	static int INDEX =12;
+	static int MAKEINDEX=0;
+	static int DATEINDEX=0;
+	static int GPSINDEX=0;
+	static int LATINDEX = 0;
+	static int LONINDEX = 0;
+	static byte[]i = new byte[8001];
+	public class inner {
+		public  void getMake() {       
+			MAKEINDEX = GetIndex(15,1);    //0F01  厂商
+			String make ="照相机厂商: ";
+			for(int x = 0;x<20;x++) {
+				if(i[INDEX+MAKEINDEX+x]==0){
+					make = make+".";
+					break;
+				}
+				char e =(char)i[INDEX+MAKEINDEX+x];
+				make = make + e;
+			}
+			System.out.println(make);
+		}
+		public  void getDate() {       
+			DATEINDEX = GetIndex(3,-112);  //0390  时间
+			String date = "拍摄时间: ";
+			for(int x = 0;x<19;x++) {
+				char e =(char)i[INDEX+DATEINDEX+x];
+				date = date + e;
+			}
+			System.out.println(date);
+		}
+		public void getGps() {
+			GPSINDEX = GetIndex(37,-120);         //2588  GPS
+			getGpsDestination(GPSINDEX,1,0,2,0);  //判断南北纬
+			LATINDEX = GetGpsInfoIndex(GPSINDEX,2,0,5,0); 
+			GetGpsInfo(LATINDEX,3,0,2,0);         //得到纬度
+			getGpsDestination(GPSINDEX,3,0,2,0);
+			LONINDEX = GetGpsInfoIndex(GPSINDEX,4,0,5,0);
+			GetGpsInfo(LONINDEX,3,0,2,0);
+		}
+	}
+	public static void getGpsDestination(int gpsindex,int Tag1,int Tag2,int Tag3,int Tag4) {
+		for(int x=gpsindex;x<gpsindex+2000;x++) {  
+        	if(i[x]==Tag1&&i[x+1]==Tag2&&i[x+2]==Tag3&&i[x+3]==Tag4){  
+        		if(Tag1 ==1) {
+        			switch(i[x+8]) {
+        			case 78:System.out.print("纬度N:");break;
+        			case 83:System.out.print("纬度S:");break;
+        			}
+        		}
+        		if(Tag1 ==3) {
+        			switch(i[x+8]) {
+        			case 69:System.out.print("经度E:");break;
+        			case 87:System.out.print("经度W:");break;
+        			}
+        		}
+        		break;
+        	}
+        }
+	}
+	public static int GetGpsInfoIndex(int gpsindex,int Tag1,int Tag2,int Tag3,int Tag4) {
+		int laloindex = 0;
+		for(int l=gpsindex;l<gpsindex+2000;l++) {  
+        	if(i[l]==Tag1&&i[l+1]==Tag2&&i[l+2]==Tag3&&i[l+3]==Tag4){
+            		for(int k=4;k>0;k--) {
+            			if (k==1) {
+            				if(i[l+k+7] < 0) {
+            					laloindex = laloindex+i[l+k+7]+256;
+            				}
+            				else {
+            					laloindex = laloindex+i[l+k+7];
+            				}
+            			}
+            			else if(i[l+k+7] < 0)  {
+            				laloindex =( laloindex+i[l+k+7]+256 )*256;
+            			}
+            			else {
+            				laloindex =( laloindex+i[l+k+7] )*256;
+            			}
+            		}
+            		break;
+            	}
+        }
+		return laloindex;
+	}
+	public static void GetGpsInfo(int NEindex,int Tag1,int Tag2,int Tag3,int Tag4) {
+			for(int k = 0;k<3;k++){		
+				int nume = 0;
+				int deno = 0;
+				int c = k*8;
+				for(int x =3;x>=0;x--) { //计算方法
+					if(i[NEindex+INDEX+x+c]<0) {
+						nume=i[NEindex+INDEX+x+c]+256+nume;
+					}else{
+						nume=i[NEindex+INDEX+x+c]+nume;
+					}
+					if(x>0){
+						nume=nume*256;
+					}
+				}
+				for(int x =7;x>=4;x--) {
+					if(i[NEindex+INDEX+x+c]<0) {
+						deno=i[NEindex+INDEX+x+c]+deno+256;
+					}else{
+						deno=i[NEindex+INDEX+x+c]+deno;
+					}
+					if(x>4){
+						deno=deno*256;
+					}
+				}
+				if(k==2){
+				System.out.println((double)nume/deno+".");
+				}else{
+					System.out.print(nume/deno+".");
+				}
+			}
+	}
+	public static int GetIndex(int Tag1,int Tag2) {
+		int index = 0;
+		for(int x=0;x<2000;x++) {  
+        	if(i[x]==Tag1&&i[x+1]==Tag2){  
+        		for(int k=4;k>0;k--) {
+        			if (k==1) {
+        				if(i[x+k+7] < 0) {
+        					index = index+i[x+k+7]+256;
+        				}
+        				else {		
+        					index = index+i[x+k+7];
+        				}
+        			}
+        			else if(i[x+k+7] < 0)  {
+        				index =( index+i[x+k+7]+256 )*256;
+        			}
+        			else {
+        				index =( index+i[x+k+7] )*256;
+        			}
+        		}
+        		break;
+        	}
+        }
+		return index;
+	}
+	
+	public static void main (String args[]) throws IOException {
+		System.out.println("请输入指定文件,如F:/1.jpg");
+		BufferedReader lo = new BufferedReader(new InputStreamReader(System.in));
+		String fileName = lo.readLine();
+		File file = new File(fileName);
+		if(file.exists()){ 
+            try {
+                FileInputStream in = new FileInputStream(file);
+                BufferedInputStream dis=new BufferedInputStream(in);
+                dis.read(i, 0, 8000);
+                L.inner k = new L().new inner();
+                k.getMake();
+                k.getDate();
+                k.getGps();
+            } catch (IOException e) {  
+                e.printStackTrace();  
+            }finally{  
+            }  
+		}
+	}
+}
+```
+
+
+***
 ###第二次
 ####这些信息的获取,我的图片比较少,同学的图也没有这些信息,所以只能对含有这些信息的图片进行获取,获取不到的时候,相关处理也是欠缺的.好像只是对有EXIF信息的图片才有效,图片有限,测试比较少,我手机拍的照片可以查到信息. Exif信息被修改后也查找不到.
 ####由于时间关系,有很多做的都不够好,这一次走了弯路,在字节读取的时候,读取的是负值就不知道该怎么办,没有想起来可以直接加256获取16进制的值,把数据转化的比较麻烦,又是字符又是ASCII码,还有16进制,有些乱了,做到最后了才发现,超过字节长度的直接加上256就好了,这样数据变换处理用了很长的时间.然后中间好多重复代码可以优化,可以定义一些函数,由于成员内部类用的太多了,不想再定义了.别的好办法也没想起来,主要是比较着急吧.想快些做完,重复代码都可以简化,也是到了快做完的时候发现的问题.用循环就解决了很多事情,在获取GPS数据的时候就用了一下,之前也可以这样用,因为马上有假期,打算出去.比较急,总的来说不是很好.太多的时间花在了学习EXIF信息和数据转换上面了.如果刚开始就意识到可以用加256进行处理,估计程序会好很多.
