--- a/10.集合类.md
+++ b/10.集合类.md
@@ -41,3 +41,98 @@ Collection中的方法:
 clear(),清空集合中的所有元素.  
 contains(Object c),检测是否包含指定的元素.  
 
+```
+//对象作为集合的元素
+import java.util.ArrayList;
+import java.util.Collection;
+
+class Person {
+	int id;
+	String name;
+	public Person(int age,String name) {
+		this.id = age;
+		this.name = name;
+	}
+	public String toString() {          //print方法 调用 toString
+		return ""+this.id+this.name;
+	}
+	public boolean equals(Object obj) { //contain方法 调 用equals比较
+		Person p = (Person)obj;
+		return this.id == p.id;
+	}
+}
+public class L {
+	public static void main (String agrs[]) {
+		Collection c = new ArrayList();
+		c.add(new Person(110,"狗娃"));
+		c.add(new Person(111,"铁蛋"));
+		c.contains(new Person(111,"铁蛋"));
+		System.out.println(c);
+		System.out.println("是否含有铁蛋"+c.contains(new Person(111,"铁蛋")));
+		
+		Collection c2 = new ArrayList();        //containsAll
+		c2.add(new Person(110,"狗娃"));
+		c2.add(new Person(111,"铁蛋"));
+		System.out.println("包含全部对象吗"+c.containsAll(c2));
+		
+		Object[] arr = c.toArray();             //toArray方法
+		for(int i = 0;i<arr.length;i++) {
+			Person p = (Person) arr[i];   
+			System.out.println(p.id+p.name);
+		}
+	}
+	
+}
+```
+输出:  
+[110狗娃, 111铁蛋]  
+是否含有铁蛋true  
+包含全部对象吗true  
+110狗娃  
+111铁蛋  
+
+Collection迭代方法:
+toArray()把集合中的元素返回一个数组,返回值是Object类型,如果需要输出子类,需要用到多态,转换成子类,才可以输出相关信息.  
+iterator()实际上返回的是Iterator接口的实现类  
+
+迭代器的方法:  
+hasNext() 是否有元素可遍历,如果有,返回true.  
+next() 获取元素.  
+remove() 移除迭代器最后一次返回的元素,没有返回值. 
+
+```
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Iterator;
+
+
+public class L {
+	public static void main (String agrs[]) {
+		Collection collection = new ArrayList();
+		collection.add("狗娃");
+		collection.add("铁蛋");
+		collection.add("黑碳");
+		collection.add("钢镚");
+		Iterator it = collection.iterator();
+		System.out.println("全部元素"+collection);
+		System.out.println("是否可遍历"+ it.hasNext());
+		System.out.println("获取元素"+ it.next()); 
+		System.out.println("删除" );
+		it.remove();
+		System.out.println("获取元素"+ it.next()); 
+		System.out.println("删除");
+		it.remove();
+		System.out.println("删除之后"+collection);
+	}
+	
+}
+```
+输出：  
+全部元素[狗娃, 铁蛋, 黑碳, 钢镚]  
+是否可遍历true  
+获取元素狗娃  
+删除  
+获取元素铁蛋  
+删除  
+删除之后[黑碳, 钢镚]  
+
