--- a/10.集合类.md
+++ b/10.集合类.md
@@ -1,9 +1,15 @@
-###10.1集合类
+###10集合类
 集合是存储对象数据的集合容器.  
 集合类与数组的不同:
 1. 数组的长度是固定的,集合的长度是可变的. 
 2. 集合可以存储任意类型的对象数据,数组只能存储同一种数据类型的数据.  
+集合的体系:  
+Colletion 单列集合的根接口.  
+List 如果是实现了List接口的集合类,该集合类具备的特点:有序,可重复.  
+Set  如果是实现了Set接口的集合类,该集合类具备的特点:无序,补课重复.  
+有序:集合的有序指添加进去的顺序,和元素出来的顺序一致.  
 
+####10.1Collection
 Collection中的方法:  
 
     public class L {
@@ -136,3 +142,12 @@ public class L {
 删除  
 删除之后[黑碳, 钢镚]  
 
+####List
+添加  
+add(int index,E element)向表中添加一个元素,可以指定位置.  
+addAll(int index,Collection<? extends E> c) 向表中可以添加一个集合,可指定位置.  
+获取  
+get(int index) 获取指定索引的元素.  
+indexOf(Object o)返回第一次出现指定对象所在的位置.  
+lastIndexOf(Object o)返回最后一次出现指定对象所在的位置.  
+subList(int fromIndex,int toIndex)指定开始和结束的索引值,截取集合中的索引值.  
