--- a/10.集合类.md
+++ b/10.集合类.md
@@ -5,8 +5,10 @@
 2. 集合可以存储任意类型的对象数据,数组只能存储同一种数据类型的数据.  
 集合的体系:  
 Colletion 单列集合的根接口.  
-List 如果是实现了List接口的集合类,该集合类具备的特点:有序,可重复.  
-Set  如果是实现了Set接口的集合类,该集合类具备的特点:无序,补课重复.  
+  List 如果是实现了List接口的集合类,该集合类具备的特点:有序,可重复.  
+    ArrayList 查询速度块,增删慢.使用的时候:数据查询多,增删少.如高校图书馆.  
+    LinkedList  使用了链表数据结构实现的.查询速度慢,增删快.  
+  Set  如果是实现了Set接口的集合类,该集合类具备的特点:无序,补课重复.  
 有序:集合的有序指添加进去的顺序,和元素出来的顺序一致.  
 
 ####10.1Collection
@@ -141,13 +143,139 @@ public class L {
 获取元素铁蛋  
 删除  
 删除之后[黑碳, 钢镚]  
-
-####List
-添加  
+***
+####10.2List
+只有List接口下面的集合类才具备索引值.  
+其他接口下面的集合类都没有索引值.  
+添加:  
 add(int index,E element)向表中添加一个元素,可以指定位置.  
 addAll(int index,Collection<? extends E> c) 向表中可以添加一个集合,可指定位置.  
-获取  
+获取:  
 get(int index) 获取指定索引的元素.  
 indexOf(Object o)返回第一次出现指定对象所在的位置.  
 lastIndexOf(Object o)返回最后一次出现指定对象所在的位置.  
 subList(int fromIndex,int toIndex)指定开始和结束的索引值,截取集合中的索引值.  
+修改:  
+set(int index,E element)修改指定索引的元素.  
+```
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Iterator;
+import java.util.List;
+
+
+public class L {
+	public static void main (String agrs[]) {
+		List list = new ArrayList();
+		list.add("张三");
+		list.add("李四");
+		list.add("王五");
+		list.add("马六");
+		
+		List list3 =list.subList(1, 4);   //截取了 4-1个元素
+		System.out.println("集合3元素"+list3);
+		List list2 = new ArrayList();
+		list2 = list;
+		System.out.println("集合2元素"+list2);
+		list.addAll(list2);
+		System.out.println("合并后集合1元素"+list);
+		list.set(0, "修改");
+		System.out.println("修改后集合1元素"+list);
+	}
+}
+```
+输出:  
+集合3元素[李四, 王五, 马六]  
+集合2元素[张三, 李四, 王五, 马六]  
+合并后集合1元素[张三, 李四, 王五, 马六, 张三, 李四, 王五, 马六]  
+修改后集合1元素[修改, 李四, 王五, 马六, 张三, 李四, 王五, 马六]  
+
+迭代:  
+listIterator() 存在Iterator所有的方法.  
+特有的方法:  
+hasPrevious() 判断是否存在上一个元素  
+previous() 获取上一个元素   指针先向上移,然后再取指针所指元素.  
+next() 获取下一个元素. 先取出当前指针所指元素,然后指针向下移.  
+添加:  
+add(E e) 把当前元素插入到指针指向的位置.  
+set(E e) 替换迭代器最后一次返回的元素.  
+迭代器在遍历元素的时候要注意:  
+1. 在迭代器迭代元素的过程中,不允许使用集合对象改变集合中的元素个数,如果想要添加或删除,应使用迭代器的方法.  
+2. 如果使用集合对象的方法改变集合中的元素个数,那么在这方法后面不能有操作迭代器的方法.  
+
+```
+//逆序输出元素
+import java.util.ArrayList;
+import java.util.List;
+import java.util.ListIterator;
+
+public class L {
+	public static void main (String agrs[]) {
+		List list = new ArrayList();
+		list.add("张三");
+		list.add("李四");
+		list.add("王五");
+		list.add("马六");
+		ListIterator it = list.listIterator();
+		while(it.hasNext()) {
+			it.next();
+		}
+		while(it.hasPrevious()) {
+			System.out.println("元素:"+it.previous());
+		}
+	}
+}
+```
+输出:  
+马六  
+王五  
+李四  
+张三  
+***
+####10.3ArrayList  
+去除相同的ID名  
+```
+import java.util.ArrayList;
+import java.util.ListIterator;
+class Book { 
+	int id;
+	String name;
+	public Book (int id,String name){
+		this.id = id;
+		this.name = name;
+	}
+	public String toString() {
+		return this.id+this.name;
+	}
+	public boolean equals(Object obj){
+		Book book =(Book)obj;
+		return this.id == book.id;
+	}
+}
+public class L {
+	public static void main (String agrs[]) {
+		ArrayList list = new ArrayList();
+		list.add(new Book(1,"JAVA初级"));
+		list.add(new Book(2,"JAVA中级"));
+		list.add(new Book(3,"JAVA高级"));
+		list.add(new Book(1,"JAVA顶级"));
+		list = remove(list);
+		System.out.println(list);      //toString方法
+			
+		}
+	public static ArrayList remove (ArrayList u) {
+		ArrayList list = new ArrayList();
+		ListIterator it = u.listIterator();
+		while(it.hasNext()) {
+			Book k =(Book) it.next();
+			if(list.contains(k)) {    //equals方法要重写
+				
+			}else {
+				list.add(k);
+			}
+		}
+		return list;
+	}
+}
+```
+输出:  [1JAVA初级, 2JAVA中级, 3JAVA高级]  
