--- a/11.多线程.md
+++ b/11.多线程.md
@@ -4,7 +4,7 @@
 多线程:一个进程中有多个线程在同时执行不同的任务.  
 一个java应用程序至少有两个线程,一个主线程负责执行main方法的代码,一个垃圾回收器线程回收垃圾.  
 多线程好处:  
-1. 解决了一个京城能同时执行多个任务的问题.  
+1. 解决了一个进程能同时执行多个任务的问题.  
 2. 提高了资源的利用率.  
 多线程的弊端:  
 1. 增加CPU负担.  
