--- a/11.多线程.md
+++ b/11.多线程.md
@@ -18,7 +18,10 @@
 每个线程都有自己的任务代码.JVM创建的主线程的任务代码就是main方法中的所有代码,  
 自定义线程的任务代码就在run方法中,自定义线程负责了run方法中代码.  
 3. 创建Thread的子类对象,并且调用start方法开启线程.  
-一个线程一旦开启,那么线程就会执行run方法中的代码,run方法不能直接调用,直接调用就相当于调用了一个普通的方法,并没有开启新的线程.  
+注意:一个线程一旦开启,那么线程就会执行run方法中的代码,run方法不能直接调用,直接调用就相当于调用了一个普通的方法,并没有开启新的线程.  
+run()方法父类没有抛出异常类型,子类也不能抛出,只能进行try,catch处理.  
+sleep()是个静态方法,哪个线程执行sleep.哪个线程睡眠.要捕获异常.  
+
 
 ```
 public class L extends Thread {  //继承Thread
@@ -36,3 +39,17 @@ public class L extends Thread {  //继承Thread
 	}
 }
 ```
+###11.2线程安全问题
+出现的原因:  
+1. 存在两个或者两个以上的线程对象,而且线程之间共享一个资源.  
+2. 有多个语句操作了共享资源.
+解决方法:  
+方式一:同步代码块.  
+同步代码快格式:  
+synchronized(锁对象){  
+    需要被同步的代码..  
+}  
+同步代码块要注意事项:  
+1. 任意的一个对象都可以作为锁对象.  
+2. 
+方式二:同步函数.  
