--- a/11.多线程.md
+++ b/11.多线程.md
@@ -39,6 +39,37 @@ public class L extends Thread {  //继承Thread
 	}
 }
 ```
+线程的常用方法:  
+Thread(String name)  初始化线程的名字  
+setName(String name) 设置线程对象名  
+getName()            返回线程名字  
+
+sleep()     线程睡眠指定的毫秒数  
+getPriority() 返回当前线程优先级,默认是5.  
+setPriority(int newPriority) 设置线程的优先级  
+currentThread()   返回cpu正在执行的线程的对象,返回Thread类型.  
+
+```
+public class L extends Thread {
+	public L (String name) {
+		super(name);
+	}
+	public void run() {
+		System.out.println("子线程名字:"+this.getName());
+		System.out.println("当前线程对象:"+this.currentThread());
+	}
+	public static void main(String args[]) {
+		L l = new L("子线程");
+		l.setPriority(7);
+		l.start();
+		l.setName("哈喽");
+		System.out.println("主线程对象:"+Thread.currentThread());
+		System.out.println("子线程优先级:"+l.getPriority());
+	}
+	
+}
+
+```
 ###11.2线程安全问题
 出现的原因:  
 1. 存在两个或者两个以上的线程对象,而且线程之间共享一个资源.  
