--- a/11.多线程.md
+++ b/11.多线程.md
@@ -82,5 +82,48 @@ synchronized(锁对象){
 }  
 同步代码块要注意事项:  
 1. 任意的一个对象都可以作为锁对象.  
-2. 
+2. 在同步代码块中调用了sleep方法并不是释放锁对象的.  
+3. 只有真正存在线程安全问题的时候才使用同步代码快.否则会降低效率.  
+4. 多线程操作的锁对象必须是唯一共享的.否则无效.  
+```
+class SaleTicket extends Thread {
+	static int num = 20;
+	static Object o = new Object();
+	public SaleTicket(String name) {
+		super(name);
+	}
+	public void run() {
+		while(true) {
+			synchronized("锁"){     //字符串是共享的,如果存在就不再创建.   如果换成new String("锁"),就不行
+				if(num>0) {
+					System.out.println(Thread.currentThread().getName()+"售出了第"+num+"张票");
+					num--;
+					try {
+						Thread.sleep(100);
+					} catch (InterruptedException e) {
+						// TODO Auto-generated catch block
+						e.printStackTrace();
+					}
+				}else {
+				System.out.println(this.getName()+"售空了");
+				break;
+				}
+			}
+		}
+	}
+}
+
+public class L {
+	public static void main(String args[]) {
+		SaleTicket a = new SaleTicket("一号");
+		SaleTicket b = new SaleTicket("二号");
+		SaleTicket c = new SaleTicket("三号");
+		
+		a.start();
+		b.start();
+		c.start();
+	}
+}
+```
+
 方式二:同步函数.  
