--- a/11.多线程.md
+++ b/11.多线程.md
@@ -126,4 +126,7 @@ public class L {
 }
 ```
 
-方式二:同步函数.  
+方式二:同步函数:同步函数就是使用synchronized修饰一个函数.  
+同步函数需要注意的方面:  
+1. 如果是一个非静态同步函数,锁对象是this对象;如果是静态的同步函数,锁对象是当前函数所属的类的字节码文件(class对象)  
+2. 同步函数的锁对象是固定的,不能由你来指定.  
