--- a/11.多线程.md
+++ b/11.多线程.md
@@ -29,6 +29,8 @@ public class L extends Thread {  //继承Thread
 		for (int i = 0;i<100;i++) { 
 			System.out.println("自定义线程执行: "+i);
 		}
+		System.out.println("this:"+this);      //表示这个类的对象,即是 q
+		System.out.println("当前线程"+Thread.currentThread());  //输出  Thread[线程1,5,main]
 	}
 	public static void  main (String args[]) {
 		L l = new L();
@@ -36,6 +38,29 @@ public class L extends Thread {  //继承Thread
 		for (int i = 0;i<100;i++) { 
 			System.out.println("主线程执行: "+i);
 		}
+	}
+}
+```
+方式二:  
+1. 自定义一个线程类,实现Runnable接口.  
+2. 实现Runnable接口的run方法,把自定义线程的任务定义在run方法上.  
+3. 创建Runnable实现类对象.  
+4. 创建Thread类的对象,并且把Runnable实现类的对象作为实参传递.  
+5. 调用Thread对象的start方法开启了歌线程.  
+
+```
+public class L implements Runnable{
+
+	public void run() {
+		for(int i = 0;i<100;i++) {
+			System.out.println(Thread.currentThread().getName()+"输出"+i);
+		}
+	}
+	public static void main(String[] args) {
+		L q = new L();
+		Thread thread = new Thread(q,"线程1");
+		thread.start();
+		
 	}
 }
 ```
@@ -86,7 +111,7 @@ synchronized(锁对象){
 3. 只有真正存在线程安全问题的时候才使用同步代码快.否则会降低效率.  
 4. 多线程操作的锁对象必须是唯一共享的.否则无效.  
 ```
-class SaleTicket extends Thread {
+class SaleTicket extends Thread {       //模拟卖票  可输出正确的结果  20~1号票
 	static int num = 20;
 	static Object o = new Object();
 	public SaleTicket(String name) {
@@ -130,3 +155,45 @@ public class L {
 同步函数需要注意的方面:  
 1. 如果是一个非静态同步函数,锁对象是this对象;如果是静态的同步函数,锁对象是当前函数所属的类的字节码文件(class对象)  
 2. 同步函数的锁对象是固定的,不能由你来指定.  
+推荐使用同步代码块.可控制范围.  
+###11.3死锁
+死锁现象出现的原因:  
+1. 存在两个或者两个以上的线程.  
+2. 存在两个或两个以上的共享资源.  
+```
+class DeadLock extends Thread {         //死锁的例子
+	public DeadLock(String name) {
+		super(name);
+	}
+	public void run() {
+		if("小明".equals(this.getName())) {
+			synchronized("遥控器") {
+				System.out.println("小明拿到了遥控器");
+				synchronized("电池") {
+					System.out.println("小明又拿到了电池,可以看电视");
+				}
+			}
+		}else if("小军".equals(this.getName())) {
+			synchronized("电池") {
+				System.out.println("小军拿到了电池");
+				synchronized("遥控器") {
+					System.out.println("小军又拿到了遥控器,可以看电视");
+				}
+			}
+		}
+		
+	}
+}
+
+
+public class L {
+	
+	public static void main(String args[]) {
+		DeadLock a = new DeadLock("小明");
+		DeadLock b = new DeadLock("小军");
+		a.start();
+		b.start();
+	}
+}
+```
+
