--- a/11.多线程.md
+++ b/11.多线程.md
@@ -49,18 +49,33 @@ public class L extends Thread {  //继承Thread
 5. 调用Thread对象的start方法开启了歌线程.  
 
 ```
-public class L implements Runnable{
-
+class SaleTicket implements Runnable {
+	int num = 50;            //不用加static  便可以实现
 	public void run() {
-		for(int i = 0;i<100;i++) {
-			System.out.println(Thread.currentThread().getName()+"输出"+i);
+		while(true){
+			synchronized("锁") {
+				if(num>0){
+					System.out.println(Thread.currentThread().getName()+"卖了票"+num);
+					num--;
+				}
+				else {
+					System.out.println("卖光了");
+					break;
+				}
+			}
 		}
 	}
+}
+
+public class L {
 	public static void main(String[] args) {
-		L q = new L();
-		Thread thread = new Thread(q,"线程1");
-		thread.start();
-		
+		SaleTicket s = new SaleTicket();
+		Thread th1 = new Thread(s,"一号");
+		Thread th2 = new Thread(s,"二号");
+		Thread th3 = new Thread(s,"三号");
+		th1.start();
+		th2.start();
+		th3.start();
 	}
 }
 ```
